# browser-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  package.json  pyproject.toml
.agents/skills/agent-collaboration/: SKILL.md
.agents/skills/ai-writing-collaborator/: SKILL.md
.agents/skills/baidu-pan-automation/: SKILL.md  analyze_ebooks.py  books_to_move.json  find_books.py  find_books_simple.py  move_books.py  retry_failed.py  verify_move.py
.agents/skills/content-converter/: SKILL.md
.agents/skills/content-formatter/: SKILL.md
.agents/workflows/: README.md
Projects/: .gitignore
Projects/AI数据分析系统/: README.md
Projects/mp-preview-dev/: README.md
Projects/svg-component-library/: README.md
Projects/todo/: README.md
Projects/wechat-article-exporter/: DEPLOY.md
Projects/写作/: AGENTS.md  README.md  _INDEX.md  敏感内容检查清单.md
Resources/Obsidian 使用/: Obsidian 常用的一些设置修改及技巧.md  信息导航.md  常用的插件.md
Resources/books/: README.md
Resources/fonts/: README.md
Resources/image-library/: index.md
Resources/transcript_outputs/: AI 养蛊，我的 AI 分身开始自己写日记了！｜ 对话 AI 野生布道师余一.md
Resources/zotero 使用/: 一些技巧.md  常用插件.md  教程信息导航.md
Resources/一堂课程/: README.md  一堂课程_目录结构.md  一堂课程_衍生笔记索引.md
Resources/个人信息/: 个人简介.md  百度网盘开放平台凭证.md  自荐个人介绍.md  银行卡信息.md
Resources/参考项目/: README.md
Resources/论文阅读/: README.md  _INDEX-论文阅读.md
Resources/账号/: X.md  gemini账号.md  github账号.md
Resources/资源索引/: AI可视化工具索引.md  AI数据分析工具索引.md  AI系统提示词仓库.md  Agent设计模式 (中文版).md  Chrome插件清单.md  Google Skills 平台概览.md  Karpathy推荐-HN最受欢迎博客RSS列表.md  LangChain文档地址.md  OpenAI兼容接口BaseURL汇总.md  Skill市场记录.md  drawio官方文档索引.md  mcp.md  一堂课程资源汇总.md  信息导航.md  常用API_Key记录.md  常用软件工具清单.md  本地部署一个drawio ai版.md  网盘内容资源汇总.md  账号代购网站.md
agents/: openai.yaml
docs/: comparison.md  windows-validation.md
src/: cli.js  native-cdp-backend.js
(+1868 files in other folders)
